// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`big STEM tool render goldens (default state) > renders + pins a digest for appLab 1`] = `
{
  "buttons": 26,
  "inputs": 5,
  "lengthBucket": 66,
  "selects": 0,
  "sha": "749fca71b5b72086",
  "svgs": 0,
}
`;

exports[`big STEM tool render goldens (default state) > renders + pins a digest for assessmentLiteracy 1`] = `
{
  "buttons": 10,
  "inputs": 0,
  "lengthBucket": 30,
  "selects": 0,
  "sha": "cb7f0729251badab",
  "svgs": 0,
}
`;

exports[`big STEM tool render goldens (default state) > renders + pins a digest for beehive 1`] = `
{
  "buttons": 82,
  "inputs": 7,
  "lengthBucket": 574,
  "selects": 0,
  "sha": "55e8be41f1e52d04",
  "svgs": 0,
}
`;

exports[`big STEM tool render goldens (default state) > renders + pins a digest for birdLab 1`] = `
{
  "buttons": 127,
  "inputs": 1,
  "lengthBucket": 732,
  "selects": 0,
  "sha": "879acb777b9f2d9c",
  "svgs": 2,
}
`;

exports[`big STEM tool render goldens (default state) > renders + pins a digest for cephalopodLab 1`] = `
{
  "buttons": 17,
  "inputs": 1,
  "lengthBucket": 75,
  "selects": 0,
  "sha": "6ed5a29fea114f81",
  "svgs": 0,
}
`;

exports[`big STEM tool render goldens (default state) > renders + pins a digest for learningLab 1`] = `
{
  "buttons": 22,
  "inputs": 0,
  "lengthBucket": 89,
  "selects": 0,
  "sha": "d1e6bb7a36d2e7a0",
  "svgs": 0,
}
`;

exports[`big STEM tool render goldens (default state) > renders + pins a digest for nutritionLab 1`] = `
{
  "buttons": 19,
  "inputs": 0,
  "lengthBucket": 119,
  "selects": 0,
  "sha": "525ef2960c69a165",
  "svgs": 0,
}
`;

exports[`big STEM tool render goldens (default state) > renders + pins a digest for plateTectonics 1`] = `
{
  "buttons": 27,
  "inputs": 5,
  "lengthBucket": 141,
  "selects": 0,
  "sha": "97d434ccc613f598",
  "svgs": 0,
}
`;

exports[`big STEM tool render goldens (default state) > renders + pins a digest for printingPress 1`] = `
{
  "buttons": 25,
  "inputs": 0,
  "lengthBucket": 225,
  "selects": 0,
  "sha": "ed17b4b56cf068aa",
  "svgs": 2,
}
`;

exports[`big STEM tool render goldens (default state) > renders + pins a digest for raptorHunt 1`] = `
{
  "buttons": 48,
  "inputs": 1,
  "lengthBucket": 127,
  "selects": 0,
  "sha": "6f5427af213dc16e",
  "svgs": 1,
}
`;

exports[`big STEM tool render goldens (default state) > renders + pins a digest for roadReady 1`] = `
{
  "buttons": 64,
  "inputs": 3,
  "lengthBucket": 203,
  "selects": 0,
  "sha": "af9f72500d801db6",
  "svgs": 0,
}
`;

exports[`big STEM tool render goldens (default state) > renders + pins a digest for solarSystem 1`] = `
{
  "buttons": 25,
  "inputs": 1,
  "lengthBucket": 83,
  "selects": 0,
  "sha": "a44e059865eeec72",
  "svgs": 0,
}
`;
